--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,13 @@
 body {
     font-family: 'Open Sans', sans-serif;
     background-color: #f9fafc;
+    margin: 20px;
 
 }
 
 nav, .links {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     font-weight: 800;
 }
 
@@ -16,128 +16,81 @@ a {
     text-decoration: none;
 }
 
+.link1 {
+    margin-left: 5px;
+    color: #69696a;
+    margin-top: 10px;
+}
+
 .link1:hover {
     color: #000;
 }
 
-.link1 {
-    margin-left: 5px;
-    text-decoration: none;
-    color: #69696a;
-}
-
-span {
+header {
     color: #000;
-    font-size: 1.5rem;
-    margin-bottom: 10px;
 }
 
 .hire {
     color: #f9fafc;
     background-color: #000;
-    padding: 5px 5px;
-    border-radius: 15px;
-    width: 70px;
-    margin-top: 3px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 20px;
+    width: 100%;
+    margin-top: 10px;
     text-align: center;
-}
-
-.hire:hover, .scroll:hover {
-    background-color: #69696a;
-
 }
 
 .scroll {
     color: #f9fafc;
     background-color: #000;
-    padding: 10px 20px;
-    border-radius: 20px;
-    width: 100px;
-    display: block;
-    margin: 0 auto;
-    text-align: center;
     font-weight: 800;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+}
 
+.hire:hover, .scroll:hover {
+    background-color: #69696a;
 }
 
 .text {
-    margin-top: 0;
-    margin-bottom: 50px;
-}
-
-h2 {
-    margin-top: 0;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
 p {
     color: #69696a;
     border: none;
-    border-left: #69696a solid 1.25px;
+    border-left: #69696a solid 2px;
     padding: 0px 20px;
+    font-weight: 800;
 }
 
 
-.circle {
-    height: 280px;
-    width: 280px;
-    align-self:  center;
-}
 
-.pink {
-    height: 200px;
-    width: 200px;
-    background-color: rgba(247, 136, 167, 0.6);
-    border-radius: 50%;
-    position: relative;
-    top: 20px;
-}
+@media only screen and (min-width: 480px) {
 
-.purple {
-    height: 100px;
-    width: 100px;
-    background-color: rgba(207, 130, 213, 0.6);
-    border-radius: 50%;
-    position: relative;
-    top: -160px;
-    left: 170px;
-}
+    .main  {
 
-.tan {
-    height: 150px;
-    width: 150px;
-    background-color: rgba(247, 193, 162, 0.7);
-    border-radius: 50%;
-    position: relative;
-    top: -180px;
-    left: 125px;
-}
-
-.main  {
-
-    display: flex;
-    flex-direction: column-reverse;
-
-}
-
-
-@media only screen and (min-width: 768px) {
-
-    html {
-        margin: 20px;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+    
     }
 
     nav, .links {
-        display: flex;
         flex-direction: row;
-        flex-wrap: wrap;
-        font-weight: 800;
         justify-content: space-between;
         align-items: center;
         font-size: 1.15rem;
-           
+   
     }
+    
 
-    span {
+    header {
 
         font-size: 1.15rem;
         margin-bottom: 0;
@@ -145,90 +98,112 @@ p {
     }
 
     .link1 {
-        margin-left: 20px;
+        margin-left: 25px;
     
     }
 
     .hire {
-        padding: 8px 25px;
+        padding: 8px 30px;
         border-radius: 20px;
         width: 80px;
-        margin-left: 15px;
+        margin-left: 25px;
     
     }
+
+    .scroll {
+       
+        
+        font-size: 1.15rem;
+        border-radius: 25px;
+        width: 150px;
+        display: block;
+        text-align: center;
+        margin: 0 auto;
+         
+    }
+
+    
+    .circle {
+        height: 400px;
+        width: 490px;
+        transform: scale(0.7);
+        position: relative;
+        margin: 0 auto;
+
+    }
+
+    .pink {
+        height: 350px;
+        width: 350px;
+        background-color: rgba(247, 136, 167, 0.6);
+        border-radius: 50%;
+        position: absolute;
+        top: 50px;
+    }
+
+    .purple {
+        height: 175px;
+        width: 175px;
+        background-color: rgba(207, 130, 213, 0.6);
+        border-radius: 50%;
+        position: absolute;
+        top: 61px;
+        left: 294px;
+    }
+
+    .tan {
+        height: 240px;
+        width: 240px;
+        background-color: rgba(247, 193, 162, 0.7);
+        border-radius: 50%;
+        position: absolute;
+        top: 205px;
+        left: 249px;
+     
+    }
+    
+    
+}
+
+@media only screen and (min-width: 900px) {
+
 
     .main {
 
         flex-direction: row;
-        /*border: solid red 1px;*/
-        justify-content: space-between;
-        margin-top: 175px;
-        margin-right: 0px;
+        justify-content: space-evenly;
+        margin-top: 110px;
+        margin-right: 10px;
+        margin-bottom: 125px;
+    
     }
 
     h2 {
-
         font-size: 2rem;
     }
 
     p {
         font-size: 1.15rem;
-        font-weight: 800;
-
     }
-
 
     .text {
 
-        /*border: solid blue 1px;*/
-        width: 55%;
-        margin-right: 30px;
+        width: 50%;
+        margin-right: 60px;
     }
 
     .circle {
-        /*border: solid 1px;*/
-        width: 375px;
-        position: relative;
-        transform: scale(1.2);
-        margin-top: 35px;
-
+        transform: scale(0.8);
     }
-
-    .pink {
-        height: 250px;
-        width: 250px;
-        background-color: rgba(247, 136, 167, 0.6);
-        border-radius: 50%;
-        position: absolute;
-        
-    }
-
-    .purple {
-        height: 125px;
-        width: 125px;
-        background-color: rgba(207, 130, 213, 0.6);
-        border-radius: 50%;
-        position: absolute;
-        top: 50px;
-        left: 210px;
-    }
-
-    .tan {
-        height: 150px;
-        width: 150px;
-        background-color: rgba(247, 193, 162, 0.7);
-        border-radius: 50%;
-        position: absolute;
-        top: 150px;
-        left: 175px;
-
-    }
-
-    .scroll {
-
-        margin-top: 125px;
-        font-size: 1.15rem;
-        width: 115px;
-    }
-
 }
+
+@media only screen and (min-width: 1024px) {
+    .circle {
+        transform: scale(0.9);
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .circle {
+        transform: scale(1);
+    }
